// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must wrap in an item with custom tag and transfer of props 1`] = `
<header
  className="one"
>
  <div>
    Hello
  </div>
</header>
`;

exports[`must wrap in an item with default tag 1`] = `
<div>
  <div>
    Hello
  </div>
</div>
`;
